<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="label_tip">Tip</string>
    <string name="label_total">Total</string>
    <string name="label_bill">Bill</string>
    <string name="amount_bill_hint"><font size="25">Enter bill</font></string>
    <string name="label_tip_percent">Tip (%)</string>
    <string name="amount_tip_percent_hint"><font size="25">Enter tip %</font></string>
    <string name="button_calculator">CALCULATE</string>
    <string name="label_party_size">Party Size</string>
    <string name="amount_party_size_hint"><font size="25">Enter party size</font></string>
</resources>